--- a/notebook/extra_processing.ipynb
+++ b/notebook/extra_processing.ipynb
@@ -2657,6 +2657,39 @@
     "feature_dir = \"/mnt/disks/data4/rsna2020/output/201022_6_CNN_b0_1loss_512_fp16_bs80_lr1e3\"\n",
     "os.makedirs(output_dir, exist_ok=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# config predict\n",
+    "DEBUG = True # set False to do all process\n",
+    "col_index = 'SOPInstanceUID'\n",
+    "col_groupby = 'StudyInstanceUID'\n",
+    "# df_test_path = \"../input/orig/test.csv\"\n",
+    "# df_sub_path = \"../input/orig/sample_submission.csv\"\n",
+    "# test_image_path = \"../input/orig/test/\"\n",
+    "\n",
+    "df_test_path = \"/mnt/disks//data5/rsna2020/test.csv\"\n",
+    "df_sub_path = \"/mnt/disks/data5/rsna2020/sample_submission.csv\"\n",
+    "test_image_path = \"/mnt/disks/data5/rsna2020/test\"\n",
+    "\n",
+    "num_cpu = multiprocessing.cpu_count()\n",
+    "num_features_b0 = 1280\n",
+    "num_features_b2 = 1408\n",
+    "weight_dir_b0_1 = \"../output/b0_stage1\"\n",
+    "weight_dir_b0_2 = \"../output/b0_stage2\"\n",
+    "weight_dir_b2_1 = \"../output/b2_stage1\"\n",
+    "weight_dir_b2_2 = \"../output/b2_stage2\"\n",
+    "weight_dir_b0_1 = \"../models/b0_stage1\"\n",
+    "weight_dir_b0_2 = \"../models/b0_stage2\"\n",
+    "weight_dir_b2_1 = \"../models/b2_stage1\"\n",
+    "weight_dir_b2_2 = \"../models/b2_stage2\"\n",
+    "BATCH_SIZE = 64\n",
+    "NUM_FOLD = 5"
+   ]
   }
  ],
  "metadata": {
